# ----------------------------------------------------------------------------
# Project setup
project(ArgParserTest)

# ----------------------------------------------------------------------------
# Executable
add_executable(${PROJECT_NAME}
    CmdLineParserTest.cpp
)

# ----------------------------------------------------------------------------
# Tests
gtest_discover_tests(${PROJECT_NAME})

# ----------------------------------------------------------------------------
# Build

target_link_libraries(${PROJECT_NAME}
    PRIVATE GTest::gtest_main
    PRIVATE SimpleArgParser::ArgParser
)
